[gd_scene load_steps=21 format=3 uid="uid://cmvcn4gdmu1ci"]

[ext_resource type="Script" uid="uid://b4jjhckpgwoyc" path="res://level_5.gd" id="1_t3h5c"]
[ext_resource type="PackedScene" uid="uid://bdj68j7nw00xj" path="res://player.tscn" id="2_mg3yy"]
[ext_resource type="PackedScene" uid="uid://dqdimo4heh3m" path="res://sun.tscn" id="3_br4so"]
[ext_resource type="Texture2D" uid="uid://d3x0ap7pmnola" path="res://assets/space_still.png" id="3_cp4ax"]
[ext_resource type="Texture2D" uid="uid://mq8lljbgr5cl" path="res://assets/glow.png" id="3_uws32"]
[ext_resource type="PackedScene" uid="uid://cr3no0n0mmkp8" path="res://planet_1.tscn" id="4_8ons7"]
[ext_resource type="Texture2D" uid="uid://v4tvt1027afe" path="res://assets/black_hole.png" id="4_o1mlc"]
[ext_resource type="AudioStream" uid="uid://b0axp8qvvue53" path="res://assets/sfx/blackhole.wav" id="5_jda3s"]
[ext_resource type="PackedScene" uid="uid://ddhl8jeo2brte" path="res://planet_2.tscn" id="5_tac4s"]
[ext_resource type="PackedScene" uid="uid://d2511uxmqxom4" path="res://planet_3.tscn" id="6_qhsfq"]
[ext_resource type="PackedScene" uid="uid://byi5bofyuoy63" path="res://planet_4.tscn" id="7_kcwpe"]
[ext_resource type="PackedScene" uid="uid://d1vbp8yrixac3" path="res://planet_5.tscn" id="8_j6qfn"]
[ext_resource type="PackedScene" uid="uid://cs8u6eyx4clr8" path="res://planet_6.tscn" id="9_2etst"]
[ext_resource type="PackedScene" uid="uid://cuob0lqo1dips" path="res://planet_7.tscn" id="10_jiqp1"]
[ext_resource type="PackedScene" uid="uid://cstu61bt5p3jc" path="res://planet_8.tscn" id="11_uws32"]
[ext_resource type="PackedScene" uid="uid://cpgr434gjp1km" path="res://wall.tscn" id="13_vcgqq"]
[ext_resource type="PackedScene" uid="uid://detkewgq8hpk" path="res://hull.tscn" id="15_gsy6j"]

[sub_resource type="Animation" id="Animation_gsy6j"]
resource_name = "black_hole"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackHole:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.5, 1.5)]
}

[sub_resource type="Animation" id="Animation_tkh5q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackHole:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oa4pn"]
_data = {
&"RESET": SubResource("Animation_tkh5q"),
&"black_hole": SubResource("Animation_gsy6j")
}

[node name="Level5" type="Node2D"]
script = ExtResource("1_t3h5c")

[node name="Player" parent="." instance=ExtResource("2_mg3yy")]
position = Vector2(13468, 0)
balls = 100
dashable = true

[node name="Glow" type="TextureRect" parent="Player"]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -512.0
offset_right = 512.0
offset_bottom = 512.0
grow_horizontal = 2
grow_vertical = 2
rotation = -3.14159
scale = Vector2(2, 2)
pivot_offset = Vector2(512, 512)
texture = ExtResource("3_uws32")

[node name="BlackHole" type="Sprite2D" parent="Player"]
visible = false
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("4_o1mlc")

[node name="BlackHoleTimer" type="Timer" parent="Player"]
one_shot = true

[node name="FadeTimer" type="Timer" parent="Player"]
one_shot = true

[node name="BlackHoleSound" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("5_jda3s")
bus = &"SFX"

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Player"]
libraries = {
&"": SubResource("AnimationLibrary_oa4pn")
}

[node name="Edibles" type="Node" parent="."]

[node name="Sun" parent="Edibles" instance=ExtResource("3_br4so")]
scale = Vector2(10, 10)
value = 100.0

[node name="Orbit1" type="Node2D" parent="Edibles"]

[node name="Planet1" parent="Edibles/Orbit1" instance=ExtResource("4_8ons7")]
position = Vector2(3017, 0)
value = 5.0

[node name="Orbit2" type="Node2D" parent="Edibles"]

[node name="Planet2" parent="Edibles/Orbit2" instance=ExtResource("5_tac4s")]
position = Vector2(3892, 0)
value = 5.0

[node name="Orbit3" type="Node2D" parent="Edibles"]

[node name="Planet3" parent="Edibles/Orbit3" instance=ExtResource("6_qhsfq")]
position = Vector2(4875, 0)
value = 5.0

[node name="Orbit4" type="Node2D" parent="Edibles"]

[node name="Planet4" parent="Edibles/Orbit4" instance=ExtResource("7_kcwpe")]
position = Vector2(5777, 0)
value = 5.0

[node name="AsteroidBelt" type="Node2D" parent="Edibles"]

[node name="Orbit5" type="Node2D" parent="Edibles"]

[node name="Planet5" parent="Edibles/Orbit5" instance=ExtResource("8_j6qfn")]
position = Vector2(7842, 0)
value = 20.0

[node name="Orbit6" type="Node2D" parent="Edibles"]

[node name="Planet6" parent="Edibles/Orbit6" instance=ExtResource("9_2etst")]
position = Vector2(9169, 0)
value = 20.0

[node name="Orbit7" type="Node2D" parent="Edibles"]

[node name="Planet7" parent="Edibles/Orbit7" instance=ExtResource("10_jiqp1")]
position = Vector2(10565, 0)
value = 20.0

[node name="Orbit8" type="Node2D" parent="Edibles"]

[node name="Planet8" parent="Edibles/Orbit8" instance=ExtResource("11_uws32")]
position = Vector2(11850, 0)
value = 20.0

[node name="KuiperBelt" type="Node2D" parent="Edibles"]

[node name="Hull" parent="Edibles" instance=ExtResource("15_gsy6j")]
position = Vector2(13350, -293)

[node name="Hull2" parent="Edibles" instance=ExtResource("15_gsy6j")]
position = Vector2(13835, -82)

[node name="Hull3" parent="Edibles" instance=ExtResource("15_gsy6j")]
position = Vector2(13830, -206)

[node name="Hull4" parent="Edibles" instance=ExtResource("15_gsy6j")]
position = Vector2(13380, 332)

[node name="Hull5" parent="Edibles" instance=ExtResource("15_gsy6j")]
position = Vector2(13245, 129)

[node name="Hull6" parent="Edibles" instance=ExtResource("15_gsy6j")]
position = Vector2(13720, 259)

[node name="Hull7" parent="Edibles" instance=ExtResource("15_gsy6j")]
position = Vector2(13951, 148)

[node name="Walls" type="Node" parent="."]

[node name="Wall" parent="Walls" instance=ExtResource("13_vcgqq")]
position = Vector2(15482, 0)
scale = Vector2(20, 2000)

[node name="Wall2" parent="Walls" instance=ExtResource("13_vcgqq")]
position = Vector2(-15482, 0)
scale = Vector2(20, 2000)

[node name="Wall3" parent="Walls" instance=ExtResource("13_vcgqq")]
position = Vector2(0, -15482)
rotation = 1.5708
scale = Vector2(20, 2000)

[node name="Wall4" parent="Walls" instance=ExtResource("13_vcgqq")]
position = Vector2(0, 15482)
rotation = 1.5708
scale = Vector2(20, 2000)

[node name="Corners" type="Node2D" parent="Walls"]
rotation = 0.785398
scale = Vector2(1.2, 1.2)

[node name="Wall5" parent="Walls/Corners" instance=ExtResource("13_vcgqq")]
position = Vector2(15482, 0)
scale = Vector2(20, 2000)

[node name="Wall6" parent="Walls/Corners" instance=ExtResource("13_vcgqq")]
position = Vector2(-15482, 0)
scale = Vector2(20, 2000)

[node name="Wall7" parent="Walls/Corners" instance=ExtResource("13_vcgqq")]
position = Vector2(0, -15482)
rotation = 1.5708
scale = Vector2(20, 2000)

[node name="Wall8" parent="Walls/Corners" instance=ExtResource("13_vcgqq")]
position = Vector2(0, 15482)
rotation = 1.5708
scale = Vector2(20, 2000)

[node name="EndingTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Space" type="TextureRect" parent="."]
z_index = -2
offset_left = -23559.0
offset_top = -22420.0
offset_right = 23324.0
offset_bottom = 22678.0
texture = ExtResource("3_cp4ax")
expand_mode = 1
stretch_mode = 1

[connection signal="timeout" from="Player/BlackHoleTimer" to="." method="_on_black_hole_timer_timeout"]
[connection signal="timeout" from="Player/FadeTimer" to="." method="_on_fade_timer_timeout"]
[connection signal="eaten" from="Edibles/Sun" to="." method="_on_sun_eaten"]
[connection signal="timeout" from="EndingTimer" to="." method="next_level"]
